# Emisia_2

./: .gitignore  CMakeLists.txt  README.md  main.c
includes/: CMakeLists.txt  create_ctwl.c  ctwl.h  cur_move_ctwl.c  delete_ctwl.c  element_insert_ctwl.c  interpolate_ctwl.c  io_ctwl.c
src/: main.c
